[SLACDP22-23] Fix overlay display on mobile

--- a/source/03-components/event-details/event-details.scss
+++ b/source/03-components/event-details/event-details.scss
@@ -22,7 +22,9 @@
   background: gesso-grayscale(stanford-black);
 
   .c-card__gradient {
-    background-size: auto 100%;
+    @include breakpoint-min(gesso-breakpoint(tablet)) {
+      background-size: auto 100%;
+    }
   }
 }
 
